# Griffion

./: CONTRIBUTING.md  COPYING  Dockerfile  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac
build_msvc/: README.md  griffion.sln  griffion_config.h.in  msvc-autogen.py  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  griffion-conf.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  tor.md  tracing.md  (+3 more)
doc/man/: Makefile.am  griffion-cli.1  griffion-qt.1  griffion-tx.1  griffion-util.1  griffion-wallet.1  griffiond.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  (+149 more)
(+1487 files in other folders)
