dist_man1_MANS=

if BUILD_GRIFFIOND
  dist_man1_MANS+=griffiond.1
endif

if ENABLE_QT
  dist_man1_MANS+=griffion-qt.1
endif

if BUILD_GRIFFION_CLI
  dist_man1_MANS+=griffion-cli.1
endif

if BUILD_GRIFFION_TX
  dist_man1_MANS+=griffion-tx.1
endif

if BUILD_GRIFFION_UTIL
  dist_man1_MANS+=griffion-util.1
endif

if ENABLE_WALLET
if BUILD_GRIFFION_WALLET
  dist_man1_MANS+=griffion-wallet.1
endif
endif
